# bazel-learning

./: .bazelrc  .gitignore  MODULE.bazel  requirements_lock.txt
app/: BUILD  main.py  read_file.py
config/: BUILD  config.json
tests/: BUILD  test_files.py  test_http.py  test_math_integration.py  test_math_unit.py
